fixed borders overlapping on notes list

--- a/css/style.css
+++ b/css/style.css
@@ -142,11 +142,14 @@ main {
 .notesList li {
   height: 75px;
   border-top: 1px solid lightgray;
-  border-bottom: 1px solid lightgray;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
+}
+
+.notesList li:last-of-type {
+  border-bottom: 1px solid lightgray;
 }
 
 .notesList li:hover {
